--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "cross-env NODE_ENV=production nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +28,8 @@
     "sequelize-cli": "^5.5.1",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
