--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production nodemon index.js",
+    "start": "NODE_ENV=production nodemon index.js",
     "dev": "nodemon index.js"
   },
   "author": "",
