--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production nodemon index.js",
+    "start": "NODE_ENV=production nodemon index.js",
     "dev": "nodemon index.js"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-sanitizer": "^1.0.6",
     "express-session": "^1.17.3",
     "jose": "^5.2.4",
     "jsonwebtoken": "^9.0.0",
