--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-DB_PASSWORD=1234
 JWT_SECRET=asdasd
 JWT_REFRESH_SECRET=asdasdasd
+
+DATABASE_HOST=ep-shy-hat-a2c9qpag.eu-central-1.pg.koyeb.app
+DATABASE_USER=koyeb-adm
+DATABASE_PASSWORD=nj8l3isZUtcE
+DATABASE_NAME=koyebdb
