--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mysql2": "^3.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^5.5.1",
     "session-file-store": "^1.5.0",
