--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DATABASE_HOST=ep-shy-hat-a2c9qpag.eu-central-1.pg.koyeb.app
 DATABASE_USER=koyeb-adm
 DATABASE_PASSWORD=nj8l3isZUtcE
 DATABASE_NAME=koyebdb
+
+SESSION_SECRET=tomyhassecret
