--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ DATABASE_PASSWORD=nj8l3isZUtcE
 DATABASE_NAME=koyebdb
 
 SESSION_SECRET=tomyhassecret
+
+DEV_DATABASE_HOST=localhost
+DEV_DATABASE_NAME=tomyhasblog
+DEV_DATABASE_USER=root
+DEV_DATABASE_PASSWORD=1234
+DEV_DATABASE_PORT=3306
