--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon --watch src --ext ts --exec \"ts-node src/index.ts\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^5.0.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "express-sanitizer": "^1.0.6",
     "express-session": "^1.17.3",
     "jose": "^5.2.4",
@@ -34,6 +37,13 @@
     "socket.io": "^4.7.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
