--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-sanitizer": "^1.0.6",
     "express-session": "^1.17.3",
     "jose": "^5.2.4",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
@@ -41,6 +41,9 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
