node dist/index.js"

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production node src/index.js",
+ "start": "npm run build && NODE_ENV=production node dist/index.js",
     "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
   },
   "author": "",
