--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.3",
     "jose": "^5.2.4",
     "jsonwebtoken": "^9.0.2",
+    "mariadb": "^3.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
