PostgreSQL에서는 큰따옴표 사용

--- a/.env
+++ b/.env
@@ -7,9 +7,11 @@ DATABASE_USER=koyeb-adm
 DATABASE_PASSWORD=9ojGUt8EpsMQ
 DATABASE_NAME=koyebdb
 DATABASE_PORT=5432
+DATABASE_DIALECT=postgres
 
 DEV_DATABASE_HOST=localhost
 DEV_DATABASE_NAME=tomyhasblog
 DEV_DATABASE_USER=root
 DEV_DATABASE_PASSWORD=1234
 DEV_DATABASE_PORT=3307
+DEV_DATABASE_DIALECT=mariadb
