--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^5.5.1",
     "session-file-store": "^1.5.0",
+    "sharp": "^0.34.1",
     "socket.io": "^4.7.0"
   },
   "devDependencies": {
